# TChapman_Code

./: README.md
C#/AgCubio/AgCubioGUI/: AgCubioGUI.csproj  Form1.Designer.cs  Form1.cs  Game_Panel.cs  Program.cs
C#/AgCubio/AgCubioServer/: Server.cs
C#/AgCubio/Cube/: packages.config
C#/AgCubio/ModelTests/: ModelTests.csproj
C#/AgCubio/Network_Controller/: NetworkController.cs
C#/AgCubio/Resources/: ErrorPage.txt  Resources.csproj
C#/AgCubio/World/: World.csproj
C++/EducationGame/EducationalApp/: collisionobject.h  food.cpp  food.h  gamecanvas.cpp  logindialog.cpp  logindialog.h  main.cpp  player.cpp  player.h  qsfmlcanvas.cpp  qsfmlcanvas.h  question.cpp  test.cpp  test.h
C++/EducationGame/EducationalAppServer/: .gitignore  CMakeLists.txt  buildlibs.sh  main.cpp  readme.md  start.sh  webs.cpp  webs.h
C++/EducationGame/EducationalAppServer/www/: dashboard.html  index.html  scores.html
CurrentProject/ChallongeApp/: .gitignore  README.md  challongeStats.py  challongeToGoogle.py  config.ini  setup.py  updateGoogleDoc.py  updateGoogleSheet.py
Java/HackerRanks/: README.md
Java/SFV_Wiki/: .classpath  README.md  sfv_data.json  sfv_data.txt
Java/SFV_Wiki/src/: sfv_data_abi.json
Java/Timekeeper/: README.md  pom.xml
Past Work/C#/AgCubio/: AgCubio.sln  README.md  README.txt
Past Work/C++/EducationGame/: README.md
Past Work/Java/HackerRanks/: RansomNote.java  RepeatedStrings.java
Past Work/Java/SFV_Wiki/: .project
Past Work/Swift/iOSGame/: README.md
Python/ChallongeApp/: .gitignore  challongeToGoogle.py  setup.py  updateGoogleSheet.py
React Native/AirU_Mobile/: package-lock.json  package.json
(+129 files in other folders)
